add: authors and relations
