# controllers/books/book.dto.go
@@ -1,17 +1,21 @@
 package controllers
 
+import (
+	"github.com/fahmiyonda007/go-gin-gorm/models"
+)
+
 type CreateBookInput struct {
-	Title  string `json:"title" binding:"required"`
-	Author string `json:"author" binding:"required"`
+	Title    string `json:"title" binding:"required"`
+	AuthorId uint   `json:"authorId" binding:"required"`
 }
 
 type UpdateBookInput struct {
-	Title  string `json:"title"`
-	Author string `json:"author"`
+	Title    string `json:"title"`
+	AuthorId uint   `json:"authorId"`
 }
 
 type BookOutput struct {
 	ID     uint
 	Title  string
-	Author string
+	Author models.Author
 }
