# models/books.go
@@ -1,7 +1,8 @@
 package models
 
 type Book struct {
-	ID     uint   `json:"id" gorm:"primary_key"`
-	Title  string `json:"title"`
-	Author string `json:"author"`
+	ID       uint   `json:"id" gorm:"primary_key"`
+	Title    string `json:"title"`
+	AuthorId uint   `json:"-" gorm:"foreignKey:AuthorId;references:ID"`
+	Author   Author `json:"author"`
 }
